# chatLLaMa

./: CMakeLists.txt  LICENSE  README.md  chatLLaMa_zh_CN.ts  common.cpp  common.h  gptutils.h  loadmodelseting.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelsetting.cpp  modelsetting.h  modelsetting.ui  processor.cpp  processor.h  runner.cpp  runner.h
docs/: CNAME  index.html
ggml/: ggml.h
llama/: ggml.c
